--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .env
 /scripts/run-sonar.sh
 
+/.scannerwork
+
 # Logs
 logs
 *.log
@@ -33,7 +35,7 @@ lerna-debug.log*
 
 # IDE - VSCode
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
