--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,15 +2,34 @@ name: CD-Sonar Metrics Collector
 on:
   workflow_dispatch:
   push:
-     branches:
+    branches:
       - main
 
 jobs:
-  build:
-    name: Deploy-ssh
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Executing remote ssh commands
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Build Docker Image
+        run: |
+          docker build -t sonar-metrics-collector .
+          echo "::set-output name=image_tag::sonar-metrics-collector:latest"
+
+      - name: Login to Docker Hub (if needed)
+        if: steps.image.outputs.image_tag == 'sonar-metrics-collector:latest'
+        run: |
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      - name: Push Docker Image
+        if: steps.image.outputs.image_tag == 'sonar-metrics-collector:latest'
+        run: |
+          docker tag sonar-metrics-collector:latest ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
+          docker push ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
+
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -19,9 +38,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd db1-projects/sonar-metrics-collector/;
-            docker container stop sonar-metrics-collector;
-            docker rm sonar-metrics-collector;
-            git pull origin main
-            docker rmi sonar-metrics-collector;
-            docker build -t sonar-metrics-collector .;
-            docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector;
+            docker container stop sonar-metrics-collector || true
+            docker rm sonar-metrics-collector || true
+            docker pull ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
+            docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
+
