--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,45 +1,42 @@
 name: CD-Sonar Metrics Collector
+
 on:
-  workflow_dispatch:
-  push:
+  workflow_dispatch: 
+  push: 
     branches:
       - main
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.x'
+
+      - name: NPM install and build
+        run: |
+          npm install
+          npm run build
+
       - name: Build Docker Image
         run: |
           docker build -t sonar-metrics-collector .
-          echo "::set-output name=image_tag::sonar-metrics-collector:latest"
 
-      - name: Login to Docker Hub (if needed)
-        if: steps.image.outputs.image_tag == 'sonar-metrics-collector:latest'
+      - name: Stop and Remove Existing Container
         run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker container stop sonar-metrics-collector || true
+          docker rm sonar-metrics-collector || true
 
-      - name: Push Docker Image
-        if: steps.image.outputs.image_tag == 'sonar-metrics-collector:latest'
+      - name: Pull Docker Image
         run: |
-          docker tag sonar-metrics-collector:latest ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
-          docker push ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
+          docker pull sonar-metrics-collector:latest
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          port: ${{ secrets.SSH_PORT }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd db1-projects/sonar-metrics-collector/;
-            docker container stop sonar-metrics-collector || true
-            docker rm sonar-metrics-collector || true
-            docker pull ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
-            docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector ${{ secrets.DOCKER_REGISTRY }}/sonar-metrics-collector:latest
-
+      - name: Run Docker Container
+        run: |
+          docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest
