--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,14 +24,19 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy-ssh
+      - name: Build Docker Image
         run: |
-          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
-            cd db1-projects/sonar-metrics-collector/;
-            docker container stop sonar-metrics-collector || true;
-            docker rm sonar-metrics-collector || true;
-            git pull origin main;
-            docker rmi sonar-metrics-collector || true;
-            docker build -t sonar-metrics-collector .;
-            docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector;
-          '
+          docker build -t sonar-metrics-collector .
+
+      - name: Stop and Remove Existing Container
+        run: |
+          docker container stop sonar-metrics-collector || true
+          docker rm sonar-metrics-collector || true
+
+      - name: Pull Docker Image
+        run: |
+          docker pull sonar-metrics-collector:latest
+
+      - name: Run Docker Container
+        run: |
+          docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest
