--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,17 +26,17 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t sonar-metrics-collector .
+         docker build -t sonar-metrics-collector .
 
       - name: Stop and Remove Existing Container
         run: |
-          docker container stop sonar-metrics-collector || true
-          docker rm sonar-metrics-collector || true
+         docker container stop sonar-metrics-collector || true
+         docker rm sonar-metrics-collector || true
 
-      - name: Pull Docker Image
-        run: |
-          docker pull sonar-metrics-collector:latest
+      ##- name: Pull Docker Image
+       ## run: |
+         ## docker pull sonar-metrics-collector:latest
 
       - name: Run Docker Container
         run: |
-          docker run -d -t -i -e npm run start:prod -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest
+         docker run -d -t -i -e NODE_ENV=production -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest
