--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,9 +29,13 @@ jobs:
          docker container stop sonar-metrics-collector || true
          docker rm sonar-metrics-collector || true
          
-      - name: Pull Docker Image
+   ##   - name: Pull Docker Image
+   ##     run: |
+    ##     docker pull sonar-metrics-collector:latest
+
+      - name: Git Pull
         run: |
-         docker pull sonar-metrics-collector:latest
+          git pull origin main
 
       - name: Build Docker Image
         run: |
