--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,4 +43,4 @@ jobs:
 
       - name: Run Docker Container
         run: |
-         docker run -d -t -i -e NODE_ENV=production -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest
+         docker run -d -t -i -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest npm run start:prod
