--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,45 +2,27 @@ name: CD-Sonar Metrics Collector
 
 on:
   workflow_dispatch: 
-  push: 
-    branches:
-      - main
+  ###push: 
+   # branches:
+     ## - main
 
 jobs:
   build:
+    name: Deploy-ssh
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Install Node.js
-        uses: actions/setup-node@v2
+      - name: Executing remote ssh commands
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          node-version: '18.x'
-
-      - name: NPM install and build
-        run: |
-          npm install
-          npm run build
-
-      - name: Stop and Remove Existing Container
-        run: |
-         docker container stop sonar-metrics-collector || true
-         docker rm sonar-metrics-collector || true
-         
-   ##   - name: Pull Docker Image
-   ##     run: |
-    ##     docker pull sonar-metrics-collector:latest
-
-      - name: Git Pull
-        run: |
-          git pull origin main
-
-      - name: Build Docker Image
-        run: |
-         docker build -t sonar-metrics-collector .
-
-      - name: Run Docker Container
-        run: |
-         docker run -d -t -i -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest npm run start:prod
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd db1-projects/sonar-metrics-collector/;
+            docker container stop sonar-metrics-collector;
+            docker rm sonar-metrics-collector;
+            git pull origin main
+            docker rmi sonar-metrics-collector;
+            docker build -t sonar-metrics-collector .;
+            docker run -d -t -i -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest npm run start:prod
