--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,9 +2,9 @@ name: CD-Sonar Metrics Collector
 
 on:
   workflow_dispatch: 
-  ###push: 
-   # branches:
-     ## - main
+  push: 
+   branches:
+     - main
 
 jobs:
   build:
