--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,4 +25,4 @@ jobs:
             git pull origin main;
             docker rmi sonar-metrics-collector;
             docker build -t sonar-metrics-collector .;
-            docker run -d -t -i -p 5100:5100 --name sonar-metrics-collector sonar-metrics-collector:latest npm run start:prod
+            docker run -d -t -i -p 5100:5100 --net metrics-collector --name sonar-metrics-collector sonar-metrics-collector:latest npm run start:prod
