--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,11 @@ jobs:
     name: Deploy-ssh
     runs-on: ubuntu-latest
     steps:
+      - name: 'Create env file'
+        run: |
+          touch .env.prod         
+          echo SONAR_USER_TOKEN=${{ secrets.SONAR_USER_TOKEN }} >> .env.prod
+          cat .env.prod
       - name: Executing remote ssh commands
         uses: appleboy/ssh-action@v1.0.0
         with:
