--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,7 @@ jobs:
             rm -rf .env
             touch .env
             echo SONAR_USER_TOKEN=${{ secrets.SONAR_USER_TOKEN }} >> .env
+            echo SONAR_URL=https://sonarhomolog.db1.com.br >> .env
             echo PORT=5100 >> .env            
             docker rmi sonar-metrics-collector;
             docker build -t sonar-metrics-collector .;
