--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,7 +19,7 @@ sonar.tests=test
 sonar.language=ts
 
 # Configuração do caminho de exclusão da cobertura (excluindo a pasta 'infra')
-sonar.coverage.exclusions=**/infra/**/*,  **/api/**/*, **/src/main.ts 
+sonar.coverage.exclusions=**/infra/**/*, **/src/main.ts, **/*.module.ts , **/*.controller.ts , **/*.dto.ts
 
 # Diretório onde os relatórios de cobertura são gerados
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
