--- a/.docker/dockerfile.dev
+++ b/.docker/dockerfile.dev
@@ -1,5 +1,5 @@
-# Imagem base APLPINE
-FROM node:18-alpine
+# Imagem base
+FROM node:latest
 
 # Diretório de trabalho
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 
 # Instala as dependências
-# RUN npm install pm2 -g
+RUN npm install pm2 -g
 
 RUN npm install 
 
@@ -22,4 +22,4 @@ RUN npm run build
 EXPOSE 5100
 
 # Comando para iniciar o servidor
-CMD ["node" , "dist/main.js"]
+CMD ["pm2", "start" , "dist/main.js", "--no-daemon"]
